# Annasui

./: .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FIREBASE_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  README.md  TONMANUAL.md  _config.yml  blue-variations-mockup.html  color-palette-mockup.html  color-palettes.html  comprehensive-color-comparison.html  firebase.json  har.py  index.html  medley-color-comparison.html  next.config.ts  niconico.html  orange-variations-mockup.html  package-lock.json  package.json  playwright.config.ts  script.js  timeline-thumbnail-mockup-v2.html  timeline-thumbnail-mockup.html  vitest.config.ts
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  (+1 more)
cside-bridge/: pyproject.toml  server.py
database/: README.md
docs/: BACKUP_RESTORE.md  FIREBASE_DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  MEDLEY_REGISTRATION_GUIDE.md  ONBOARDING_CHECKLIST.md  README.md  SEO_IMPLEMENTATION.md  SESSION_NOTES.md  TECHNICAL_REFERENCE.md  TROUBLESHOOTING.md  api-integration.md  architecture.md  contributing.md  debug-issues.md  requirements.md
e2e/: medley.spec.ts
extension/: background.js  content.js  manifest.json  offscreen.js  popup.html  popup.js
mockups/: index.html  plan1-left-two-rows.html  plan2-left-toggle.html  plan3-top-bar.html  plan6-right-sidebar.html
scripts/: README.md  add_individual_links.js  backup-database.sh  batch-update-colors.js  check_database_schema.js  check_medleys.js  check_sm2959233.js  restore-database.sh  test_search.js  update_original_links.js
supabase/: schema.sql  seed.sql
(+273 files in other folders)
