[project]
name = "cside-bridge"
version = "0.1.0"
description = "FastAPI bridge that exposes CSIDE MuQExtractor as HTTP API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "torch>=2.3.0",
    "librosa>=0.10.2",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
cside = { path = "../cside", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
